--- a/dashboard.html
+++ b/dashboard.html
@@ -1,164 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Finance Point Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@600&display=swap" rel="stylesheet" />
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-    }
-
     body {
-      display: flex;
-      min-height: 100vh;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #fff;
-    }
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+    }header {
+  background-color: #1f1f2e;
+  text-align: center;
+  padding: 2rem 1rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
 
-    .sidebar {
-      width: 220px;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 20px 10px;
-      position: fixed;
-      height: 100vh;
-      overflow-y: auto;
-      top: 0;
-      left: 0;
-      z-index: 100;
-    }
+header h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  margin: 0 0 0.5rem;
+  color: #FFD700;
+}
 
-    .sidebar h2 {
-      font-family: 'Merriweather', serif;
-      font-size: 22px;
-      text-align: center;
-      margin-bottom: 30px;
-      color: #ffd700;
-    }
+header p {
+  font-size: 1rem;
+  color: #ccc;
+}
 
-    .sidebar a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #ccc;
-      text-decoration: none;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+  padding: 2rem;
+}
 
-    .sidebar a:hover,
-    .sidebar a.active {
-      background: #ffd700;
-      color: #000;
-      font-weight: bold;
-    }
+.card {
+  background-color: #1e1e2f;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  transition: transform 0.3s;
+}
 
-    .main {
-      margin-left: 220px;
-      flex: 1;
-      padding: 20px;
-    }
+.card:hover {
+  transform: translateY(-5px);
+}
 
-    .topbar {
-      background: rgba(255, 255, 255, 0.08);
-      padding: 15px 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      backdrop-filter: blur(8px);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.card h2 {
+  font-family: 'Poppins', sans-serif;
+  margin-top: 0;
+  color: #00B386;
+}
 
-    .topbar h1 {
-      font-size: 20px;
-      color: #ffd700;
-      font-weight: 600;
-    }
+.card p {
+  line-height: 1.5;
+  font-size: 0.95rem;
+}
 
-    .section {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 25px;
-      border-radius: 12px;
-      backdrop-filter: blur(6px);
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    }
+@media (max-width: 600px) {
+  header h1 {
+    font-size: 1.5rem;
+  }
 
-    .section h2 {
-      font-size: 20px;
-      margin-bottom: 15px;
-      color: #ffd700;
-    }
+  .container {
+    padding: 1rem;
+  }
+}
 
-    .section p {
-      font-size: 15px;
-      color: #eee;
-      line-height: 1.6;
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 13px;
-      color: #ccc;
-      text-align: center;
-    }
-
-    @media (max-width: 768px) {
-      .sidebar {
-        display: none;
-      }
-
-      .main {
-        margin-left: 0;
-        padding: 15px;
-      }
-
-      .topbar h1 {
-        font-size: 18px;
-      }
-
-      .section h2 {
-        font-size: 18px;
-      }
-    }
   </style>
+  <script>
+    async function loadDashboard() {
+      try {
+        const res = await fetch("https://api.jsonstorage.net/v1/json/YOUR_DASHBOARD_STORAGE_ID");
+        const data = await res.json();
+        document.getElementById("fact").textContent = data.fact;
+        document.getElementById("news").textContent = data.news;
+        document.getElementById("tip").textContent = data.tip;
+      } catch (e) {
+        console.error("Error loading dashboard info:", e);
+      }
+    }
+    window.onload = loadDashboard;
+  </script>
 </head>
-<body>
-  <div class="sidebar">
-    <h2>Finance Point</h2>
-    <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
-    <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
-    <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
-    <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
-    <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
-    <a href="admin.html"><i class="fas fa-lock"></i> Admin</a>
-    <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-    <a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
-  </div>
+<body>  <header>
+    <h1>Hello there! 👋</h1>
+    <p>Welcome to Finance Point — Stay updated, stay inspired!</p>
+  </header>  <main class="container">
+    <div class="card">
+      <h2>📢 Announcements</h2>
+      <p>All 200 level students are reminded of the upcoming test on Friday.<br>📍 Venue: LT1 <br>⏰ Time: 10am</p>
+    </div><div class="card">
+  <h2>👨‍💼 Executives</h2>
+  <p>President: John Doe<br>PRO: OBA<br>Treasurer: Jane Smith</p>
+</div>
 
-  <div class="main">
-    <div class="topbar">
-      <h1>Welcome, OBA (PRO)</h1>
-    </div>
+<div class="card">
+  <h2>📆 Events</h2>
+  <p>📌 Finance Summit 2025<br>📅 July 15th, 2025<br>🏛️ New Auditorium</p>
+</div>
 
-    <div class="section">
-      <h2>Dashboard Overview</h2>
-      <p>
-        This is the central hub for all AAUA Finance students. Here, you'll find quick links to important updates,
-        events, downloads, and department news. Stay connected and informed with all the latest activities directly from your department.
-      </p>
-    </div>
+<div class="card">
+  <h2>💡 Finance Fact</h2>
+  <p id="fact">Loading...</p>
+</div>
 
-    <footer>
-      &copy; 2025 Finance Point • AAUA Finance Dept • Created by OBA
-    </footer>
-  </div>
-</body>
+<div class="card">
+  <h2>📰 Campus News</h2>
+  <p id="news">Loading...</p>
+</div>
+
+<div class="card">
+  <h2>🎓 Academic Tip</h2>
+  <p id="tip">Loading...</p>
+</div>
+
+  </main></body>
 </html>
